:construction: Adding Styles
Adding styles to the components. New Heading Component added.

--- a/public/builds/Test/index.html
+++ b/public/builds/Test/index.html
@@ -1,14 +1,27 @@
-<html id="__html960826"><head id="__head878795"><title id="__title100685">Test Page</title>
-<meta id="__meta421134" name="author" content="Me"></meta>
-<meta id="__meta243563" name="description" content="idk"></meta>
-<meta id="__meta430578" name="keywords" content="a,b,c"></meta>
+<html id="__html186375"><head id="__head719681"><title id="__title603715">Test Page</title>
+<meta id="__meta148708" name="author" content="Me"></meta>
+<meta id="__meta931365" name="description" content="idk"></meta>
+<meta id="__meta100299" name="keywords" content="a,b,c"></meta>
+<link id="__link304287" rel="stylesheet" href="style/index.css"></link>
 </head>
-<body id="__body758863"><nav id="__nav177157" class="_navbar"><a id="__a716086" target="_self" href="url">link1</a>
-<a id="__a848999" target="_self" href="url2">link2</a>
-<div id="__div743672" class="_dropdown"><button id="__button826506" class="_dropdown-button">dropdown1</button>
-<div id="__div430763" class="_dropdown-content"><a id="__a995061" target="_self" href="AAa">dropdownLink1</a>
-<a id="__a366063" target="_self" href="VV">dropdownLink2</a>
-<a id="__a805224" target="_self" href="AKK">dropdownLink3</a>
+<body id="__body897128"><nav id="__nav980529" class="_navbar"><div id="__div826822" class="_navbar-desktop"><h1 id="__h1624829">SUjal</h1>
+<a id="__a695392" target="_self" href="url">link1</a>
+<a id="__a191705" target="_self" href="url2">link2</a>
+<div id="__div348402" class="_dropdown"><button id="__button738057" class="_dropdown-button">dropdown1</button>
+<div id="__div255696" class="_dropdown-content"><a id="__a421002" target="_self" href="AAa">dropdownLink1</a>
+<a id="__a250783" target="_self" href="VV">dropdownLink2</a>
+<a id="__a742342" target="_self" href="AKK">dropdownLink3</a>
+</div>
+</div>
+</div>
+<div id="__div582991" class="_navbar-mobile"><h1 id="__h1624829">SUjal</h1>
+<a id="__a695392" target="_self" href="url">link1</a>
+<a id="__a191705" target="_self" href="url2">link2</a>
+<div id="__div348402" class="_dropdown"><button id="__button738057" class="_dropdown-button">dropdown1</button>
+<div id="__div255696" class="_dropdown-content"><a id="__a421002" target="_self" href="AAa">dropdownLink1</a>
+<a id="__a250783" target="_self" href="VV">dropdownLink2</a>
+<a id="__a742342" target="_self" href="AKK">dropdownLink3</a>
+</div>
 </div>
 </div>
 </nav>
