🧱 Styles Changed to Inline
The styles are inline eliminating the entire `.css` files. Cleansed code

--- a/public/builds/Test/index.html
+++ b/public/builds/Test/index.html
@@ -1,17 +1,9 @@
-<html id="__html281294">
-
-<head id="__head684092">
-    <title id="__title285910">Test Page</title>
-    <meta id="__meta425997" name="author" content="Me">
-    </meta>
-    <meta id="__meta154818" name="description" content="idk">
-    </meta>
-    <meta id="__meta590386" name="keywords" content="a,b,c">
-    </meta>
-    <link id="__link122203" rel="stylesheet" href="style/index.css">
-    </link>
+<html id="__html471622" lang="en"><head id="__head556054"><title id="__title181383">Test Page</title>
+<meta id="__meta608973" name="author" content=""></meta>
+<meta id="__meta368726" name="description" content=""></meta>
+<meta id="__meta957139" name="keywords" content=""></meta>
 </head>
-
-<body id="__body349761"></body>
-
+<body id="__body445018"><div id="__div939276" style="display: flex; flexDirection: column; alignItems: stretch; justifyContent: flex-start;height: 100%; flexGrow: 1;"><h3 id="__h3608395">Test Page</h3>
+</div>
+</body>
 </html>
