🚧 Cards and Modal Containers
Card and Modal Containers added.

--- a/public/builds/my-test-project/index.html
+++ b/public/builds/my-test-project/index.html
@@ -1,15 +1,15 @@
-<html id="__html779769" lang="en"><head id="__head383900"><title id="__title595567">My Demo Store</title>
-<meta id="__meta193831" name="author" content="developer"></meta>
-<meta id="__meta611589" name="description" content="description"></meta>
-<meta id="__meta591242" name="keywords" content="shop,store,products"></meta>
+<html id="__html660874" lang="en"><head id="__head419869"><title id="__title909691">My Demo Store</title>
+<meta id="__meta641997" name="author" content="developer"></meta>
+<meta id="__meta493172" name="description" content="description"></meta>
+<meta id="__meta979622" name="keywords" content="shop,store,products"></meta>
 </head>
-<body id="__body115544"><h1 id="__h1583422" style="display: flex; align-items: center; justify-content: center;font-size: 60px;">My Demo Store</h1>
-<div id="__div458455" style="display: flex; align-items: stretch; justify-content: flex-start;color: white; background-color: green;"><p id="__p399732" style="display: flex; align-items: center; justify-content: flex-end;height: 100%; flex-grow: 1;">NOT Welcome to my demo store</p>
-<p id="__p789903">Welcome to my demo store</p>
-<p id="__p986852">Welcome to my demo store</p>
-<p id="__p701667">Welcome to my demo store</p>
+<body id="__body414935"><h1 id="__h1710965" style="display: flex; align-items: center; justify-content: center;font-size: 60px;">My Demo Store</h1>
+<div id="__div746005" role="dialog" aria-modal="true" style="padding: 0px   ;margin: 0px   ;display: flex; align-items: stretch; justify-content: flex-start;position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 9999; display: flex; justify-content: center; align-items: center;"><p id="__p336303" style="display: flex; align-items: center; justify-content: flex-end;height: 100%; flex-grow: 1;">NOT Welcome to my demo store</p>
+<p id="__p450934">Welcome to my demo store</p>
+<p id="__p911400">Welcome to my demo store</p>
+<p id="__p828192">Welcome to my demo store</p>
 </div>
-<div id="__div441152" style="display: flex; align-items: stretch; justify-content: flex-start;height: 100%; width: 100%; flex-grow: 1;"><p id="__p167274" style="display: flex; align-items: center; justify-content: center;height: 100%; flex-grow: 1;">Part 2?</p>
+<div id="__div580468" style="display: flex; align-items: stretch; justify-content: flex-start;height: 100%; width: 100%; flex-grow: 1;"><p id="__p447842" style="display: flex; align-items: center; justify-content: center;height: 100%; flex-grow: 1;">Part 2?</p>
 </div>
 </body>
 </html>
