--- a/public/builds/Test/index.html
+++ b/public/builds/Test/index.html
@@ -1,9 +1,10 @@
-<html  lang="en"><head ><title >Test Page</title>
-<meta  name="author" content=""></meta>
-<meta  name="description" content=""></meta>
-<meta  name="keywords" content=""></meta>
+<html  lang="en"><head ><title >Test</title>
+<meta  name="author" content="Solaris"></meta>
+<meta  name="description" content="This is a test"></meta>
+<meta  name="keywords" content="test, solaris"></meta>
+<link  rel="stylesheet" href="C:\Users\Ansh\Desktop\Solaris UI\SolarisUI\public\styles\ansh\i.css"></link>
+<link  rel="stylesheet" href="C:\Users\Ansh\Desktop\Solaris UI\SolarisUI\public\styles\index.css"></link>
+<link  rel="stylesheet" href="C:\Users\Ansh\Desktop\Solaris UI\SolarisUI\a.css"></link>
 </head>
-<body ><div  style="display: flex; align-items: stretch; justify-content: flex-start;height: 100%; flex-grow: 1;"><h3 >Test Page</h3>
-</div>
-</body>
+<body ></body>
 </html>
