--- a/public/builds/Test/index.html
+++ b/public/builds/Test/index.html
@@ -5,6 +5,5 @@
 <link  rel="stylesheet" href="C:\Users\Ansh\Desktop\Solaris UI\SolarisUI\public\styles\index.css"></link>
 <link  rel="stylesheet" href="C:\Users\Ansh\Desktop\Solaris UI\SolarisUI\a.css"></link>
 </head>
-<body ><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" type="module" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+<body ></body>
 </html>
