--- a/builds/Test/index.html
+++ b/builds/Test/index.html
@@ -1,10 +1,32 @@
-<html  lang="en"><head ><title >Test Page</title>
-<meta  name="author" content=""></meta>
-<meta  name="description" content=""></meta>
-<meta  name="keywords" content=""></meta>
-<link  rel="stylesheet" href="./style/index.css"></link>
+<html lang="en">
+
+<head>
+    <title>Head</title>
+    <meta name="author" content="">
+    </meta>
+    <meta name="description" content="">
+    </meta>
+    <meta name="keywords" content="">
+    </meta>
+    <link rel="stylesheet" href="./style/index.css">
+    </link>
 </head>
-<body ><div  class="container" style="height: 100%; flex-grow: 1;"><h3 >Test Page</h3>
-</div>
+
+<body>
+    <h1 style="color: #f111cc; background-color: #1f101f;">Heading</h1>
+    <h2 style="color: #f222cc; background-color: #2f202f;">Heading</h2>
+    <h3 style="color: #f333cc; background-color: #3f303f;">Heading</h3>
+    <h4 style="color: #f444cc; background-color: #4f404f;">Heading</h4>
+    <h5 style="color: #f555cc; background-color: #5f505f;">Heading</h5>
+    <h6 style="color: #f666cc; background-color: #6f606f;">Heading</h6>
+    <div style="padding: 20px   ;display: flex; align-items: center; justify-content: center;"
+        class="container horizontal-container">
+        <h1>Hero Test</h1>
+        <button>Click me!</button>
+    </div>
+    <div style="padding: 20px ;display: flex; align-items: center; justify-content: center;height: 100%; flex-grow: 1;"
+        class="container vertical-container">Hello 0Hello 1Hello 2Hello 3Hello 4Hello 5Hello 6Hello 7Hello 8Hello 9
+    </div>
 </body>
+
 </html>
