♻️ Refactored Base Code
Introduced Logger into basic folder.
Cleaned textType options.
Updated styles in public/index.css

--- a/builds/Test/index.html
+++ b/builds/Test/index.html
@@ -17,6 +17,6 @@
 <a  target="_self" href="https://google.com"></a>
 </button>
 </div>
-<div  style="padding: 20px ;display: flex; align-items: center; justify-content: center;height: 100%; flex-grow: 1;" class="container vertical-container">Hello 0Hello 1Hello 2Hello 3Hello 4Hello 5Hello 6Hello 7Hello 8Hello 9</div>
+<div  style="padding: 20px   ;display: flex; align-items: center; justify-content: center;min-height: 0; min-width: 1; flex-grow: 1;" class="container vertical-container">Hello 0Hello 1Hello 2Hello 3Hello 4Hello 5Hello 6Hello 7Hello 8Hello 9</div>
 </body>
 </html>
