--- a/builds/HLTest/index.html
+++ b/builds/HLTest/index.html
@@ -2,7 +2,8 @@
 <meta  name="author" content=""></meta>
 <meta  name="description" content=""></meta>
 <meta  name="keywords" content=""></meta>
-<link  rel="stylesheet" href="./style/index.css"></link>
+<link  rel="stylesheet" href="./style/navbar.css"></link>
+<link  rel="stylesheet" href="./style/navbar.css"></link>
 </head>
 <body ><section  style="height: 80vh; display: flex;"><div  class="container horizontal-container" style="min-height: 0; min-width: 0; flex-grow: 1;"><div  class="container vertical-container" style="min-height: 0; min-width: 0; flex-grow: 1;display: flex; align-items: center; justify-content: center;"></div>
 <div  class="container vertical-container" style="min-height: 0; min-width: 0; flex-grow: 1;display: flex; align-items: center; justify-content: center;"></div>
