--- a/builds/Test/index.html
+++ b/builds/Test/index.html
@@ -1,4 +1,3 @@
-<html  lang="en"><head ><meta  charset="UTF-8"></meta><meta  http-equiv="X-UA-Compatible" content="IE=edge"></meta><meta  name="viewport" content="width=device-width, initial-scale=1.0"></meta><title ></title>
-Title</head><body >
-    Nine
+<html lang="en"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><title>Title</title></head><body>
+    None
 </body></html>
